--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -16,38 +15,36 @@
         android:layout_marginTop="50dp"
         android:src="@drawable/dedsec_logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_marginTop="64dp" />
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/welcome_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:text="Welcome Back"
+        android:text="Create Account"
         android:textColor="@color/dark_text_primary"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logo"
-        app:layout_marginTop="16dp" />
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/subtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Sign in to continue scanning"
+        android:text="Join our secure community"
         android:textColor="@color/dark_text_secondary"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/welcome_text"
-        app:layout_marginTop="8dp" />
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/password"
@@ -56,6 +53,7 @@
         android:layout_marginTop="4dp"
         android:background="@color/dark_secondary"
         android:hint="Password"
+        android:importantForAutofill="no"
         android:inputType="textPassword"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
@@ -63,26 +61,11 @@
         android:textColorHint="@color/dark_text_secondary"
         app:flow_horizontalAlign="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email"
-        app:layout_marginHorizontal="32dp"
+        android:layout_marginHorizontal="32dp"
+        tools:ignore="HardcodedText" />
 
-        app:layout_marginTop="16dp" />
-
-    <TextView
-        android:id="@+id/forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="28dp"
-        android:text="Forgot Password?"
-        android:textColor="@color/element_primary"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password"
-        app:layout_marginEnd="32dp"
-        app:layout_marginTop="8dp" />
 
     <EditText
         android:id="@+id/email"
@@ -91,72 +74,44 @@
         android:layout_marginTop="40dp"
         android:background="@color/dark_secondary"
         android:hint="Email Address"
+        android:importantForAutofill="no"
+        android:inputType="textEmailAddress"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:textColor="@color/dark_text_primary"
         android:textColorHint="@color/dark_text_secondary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/subtext"
-        app:layout_marginHorizontal="32dp"
-        app:layout_marginTop="24dp" />
+        android:layout_marginHorizontal="32dp"
+        tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/sign_in"
-        android:layout_width="350dp"
+        android:id="@+id/sign_up"
+        android:layout_width="320dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/element_primary"
-        android:text="Sign In"
-        android:textColor="@color/dark_text_primary"
+        android:text="Sign Up"
+        android:textColor="@color/dark_primary"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/forgot_password"
-        app:layout_marginHorizontal="32dp"
-        app:layout_marginTop="24dp" />
+        app:layout_constraintTop_toBottomOf="@id/password"
+        android:layout_marginHorizontal="32dp"
+        tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/sign_up_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="156dp"
-        android:text="Don’t have an account? Sign Up"
-        android:textColor="@color/dark_text_secondary"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_marginBottom="32dp" />
-
-    <Button
-        android:id="@+id/google_sign_in"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@color/dark_secondary"
-        android:text="Continue with Google"
-        android:textColor="@color/dark_text_primary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.54"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/or_text"
-        app:layout_marginHorizontal="32dp"
-        app:layout_marginTop="16dp" />
-
-    <TextView
-        android:id="@+id/or_text"
+        android:id="@+id/LogInText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="OR"
+        android:text="Already have an account? Sign In"
         android:textColor="@color/dark_text_secondary"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sign_in"
-        app:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/sign_up"
+        tools:ignore="HardcodedText" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
