--- a/app/src/main/res/drawable/tab_selector.xml
+++ b/app/src/main/res/drawable/tab_selector.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/element_primary" />
-            <corners android:radius="6dp" />
+            <solid android:color="@color/accent_primary" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/transparent" />
-            <corners android:radius="6dp" />
+            <corners android:radius="8dp" />
         </shape>
     </item>
 </selector> 
