--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,16 +9,30 @@
     android:background="@color/dark_primary"
     tools:context=".LoginActivity">
 
-    <ImageView
+<!--    <ImageView-->
+<!--        android:id="@+id/logo"-->
+<!--        android:layout_width="60dp"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:src="@drawable/dedsec_logo"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:ignore="ContentDescription" />-->
+
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/logo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/dedsec_logo"
+        android:layout_width="200dp"
+        android:layout_height="184dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintVertical_bias="0.111"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/logo_animation" />
 
     <TextView
         android:id="@+id/welcome_text"
@@ -75,7 +89,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="28dp"
         android:text="Forgot Password?"
-        android:textColor="@color/element_primary"
+        android:textColor="@color/accent_primary"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@id/password"
         app:layout_constraintTop_toBottomOf="@id/password"
@@ -100,29 +114,66 @@
         android:layout_marginHorizontal="32dp"
         tools:ignore="HardcodedText" />
 
-    <Button
+    <!--    <com.google.android.material.button.MaterialButton-->
+<!--        android:id="@+id/signupButton"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="56dp"-->
+<!--        android:layout_marginHorizontal="24dp"-->
+<!--        android:layout_marginBottom="292dp"-->
+<!--        android:backgroundTint="@color/accent_primary"-->
+<!--        android:text="Sign Up"-->
+<!--        android:textColor="@color/dark_primary"-->
+<!--        android:textSize="16sp"-->
+<!--        app:cornerRadius="8dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.373"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintWidth_max="320dp"-->
+<!--        tools:ignore="HardcodedText" />-->
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/sign_in"
-        android:layout_width="320dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/element_primary"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="192dp"
+        android:backgroundTint="@color/accent_primary"
         android:text="Sign In"
         android:textColor="@color/dark_primary"
+        android:textSize="16sp"
+        app:cornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/forgot_password"
-        android:layout_marginHorizontal="32dp"
+        app:layout_constraintWidth_max="320dp"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/or_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="OR"
+        android:textColor="@color/dark_text_secondary"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sign_in"
         tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/sign_up_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Don’t have an account? Sign Up"
+        android:layout_marginTop="4dp"
+        android:text="Don't have an account? Sign Up"
         android:textColor="@color/dark_text_secondary"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/google_sign_in"
         tools:ignore="HardcodedText" />
@@ -131,27 +182,15 @@
         android:id="@+id/google_sign_in"
         android:layout_width="320dp"
         android:layout_height="48dp"
+        android:layout_marginHorizontal="32dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/dark_secondary"
         android:text="Continue with Google"
         android:textColor="@color/dark_text_primary"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/or_text"
-        android:layout_marginHorizontal="32dp"
-        tools:ignore="HardcodedText" />
-
-    <TextView
-        android:id="@+id/or_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="OR"
-        android:textColor="@color/dark_text_secondary"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sign_in"
         tools:ignore="HardcodedText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
