--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,16 +8,19 @@
     android:background="@color/dark_primary"
     tools:context=".SignupActivity">
 
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/logo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/dedsec_logo"
+        android:layout_width="200dp"
+        android:layout_height="184dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintVertical_bias="0.111"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/logo_animation" />
 
     <TextView
         android:id="@+id/welcome_text"
@@ -86,31 +89,36 @@
         android:layout_marginHorizontal="32dp"
         tools:ignore="HardcodedText" />
 
-    <Button
-        android:id="@+id/sign_up"
-        android:layout_width="320dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/element_primary"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/signupButton"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="192dp"
+        android:backgroundTint="@color/accent_primary"
         android:text="Sign Up"
         android:textColor="@color/dark_primary"
+        android:textSize="16sp"
+        app:cornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password"
-        android:layout_marginHorizontal="32dp"
+        app:layout_constraintWidth_max="320dp"
         tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/LogInText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:text="Already have an account? Sign In"
         android:textColor="@color/dark_text_secondary"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sign_up"
+        app:layout_constraintTop_toBottomOf="@id/signupButton"
         tools:ignore="HardcodedText" />
 
 
