--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,56 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SentinelApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/dark_primary</item>
-         <item name="colorSecondary">@color/dark_secondary</item>
+    <style name="Theme.SentinelApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/accent_primary</item>
+        <item name="colorPrimaryVariant">@color/accent_secondary</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color -->
+        <item name="colorSecondary">@color/accent_tertiary</item>
+        <item name="colorSecondaryVariant">@color/accent_tertiary</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <!-- Status bar color -->
+        <item name="android:statusBarColor">@color/dark_primary</item>
+        <!-- Background colors -->
+        <item name="android:windowBackground">@color/dark_primary</item>
+        <item name="colorSurface">@color/dark_surface</item>
+        <item name="colorOnSurface">@color/dark_text_primary</item>
+        <!-- Text colors -->
+        <item name="android:textColorPrimary">@color/dark_text_primary</item>
+        <item name="android:textColorSecondary">@color/dark_text_secondary</item>
+        <!-- Custom attributes -->
+        <item name="materialButtonStyle">@style/Widget.SentinelApp.Button</item>
+        <item name="tabStyle">@style/Widget.SentinelApp.Tab</item>
     </style>
 
-    <style name="Theme.SentinelApp" parent="Base.Theme.SentinelApp" />
+    <!-- No Action Bar theme -->
+    <style name="Theme.SentinelApp.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
+
+    <!-- Button style -->
+    <style name="Widget.SentinelApp.Button" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/dark_primary</item>
+        <item name="backgroundTint">@color/accent_primary</item>
+        <item name="cornerRadius">8dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <!-- Tab style -->
+    <style name="Widget.SentinelApp.Tab" parent="Widget.Design.TabLayout">
+        <item name="tabTextColor">@color/dark_text_secondary</item>
+        <item name="tabSelectedTextColor">@color/black</item>
+        <item name="tabIndicatorColor">@android:color/transparent</item>
+        <item name="tabBackground">@drawable/tab_selector</item>
+    </style>
 </resources>
