--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,9 @@
     <color name="gradient_end">#651FFF</color>
     
     <!-- System Colors -->
-    <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="cyan">#00E5FF</color>
+    <color name="card_background">#1A1A1A</color>
+    <color name="text_secondary">#808080</color>
 </resources>
