--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,4 +31,7 @@
     <color name="cyan">#00E5FF</color>
     <color name="card_background">#1A1A1A</color>
     <color name="text_secondary">#808080</color>
+    
+    <!-- Custom colors -->
+    <color name="danger">#FFE53935</color>
 </resources>
